# loony-examples

./: Cargo.toml  README.md
async_db/: Cargo.toml
async_db/src/: db.rs  main.rs
async_ex1/: Cargo.toml
async_ex1/src/: main.rs
async_ex2/: Cargo.toml
async_ex2/src/: appconfig.rs
async_ex2/src/handlers/: parts.rs  products.rs
async_pg/: Cargo.toml
async_pg/src/: main.rs
awc_https/: Cargo.toml
awc_https/src/: main.rs
basics/: Cargo.toml
basics/src/: main.rs
cookie-auth/: Cargo.toml
cookie-auth/src/: main.rs
cookie-session/: Cargo.toml
cookie-session/src/: main.rs
diesel/: Cargo.toml
diesel/src/: main.rs
docker_sample/: Cargo.toml
docker_sample/src/: main.rs
error_handling/: Cargo.toml
error_handling/src/: main.rs
form/: Cargo.toml
form/src/: main.rs
graphql-demo/: Cargo.toml
graphql-demo/src/: handlers.rs  main.rs
hello-world/: Cargo.toml
hello-world/src/: main.rs
http-proxy/: Cargo.toml
http-proxy/src/: main.rs
json/: Cargo.toml
json/src/: main.rs
json_error/: Cargo.toml
json_error/src/: main.rs
jsonrpc/: Cargo.toml
jsonrpc/src/: main.rs
juniper/: Cargo.toml
juniper/src/: main.rs
middleware/: Cargo.toml
middleware/src/: main.rs  read_request_body.rs  read_response_body.rs  redirect.rs  simple.rs
multipart/: Cargo.toml
multipart/src/: main.rs
openssl/: Cargo.toml
openssl/src/: main.rs
r2d2/: Cargo.toml
r2d2/src/: main.rs
run-in-thread/: Cargo.toml
run-in-thread/src/: main.rs
rustls/: Cargo.toml
rustls/src/: main.rs
server-sent-events/: Cargo.toml
server-sent-events/src/: main.rs
shutdown-server/: Cargo.toml
shutdown-server/src/: main.rs
simple-auth-server/: Cargo.toml
simple-auth-server/src/: auth_handler.rs  errors.rs  invitation_handler.rs  main.rs  register_handler.rs
state/: Cargo.toml
state/src/: main.rs
static_index/: Cargo.toml
static_index/src/: main.rs
template_askama/: Cargo.toml
template_askama/src/: main.rs
template_handlebars/: Cargo.toml
template_handlebars/src/: main.rs
template_tera/: Cargo.toml
template_tera/src/: main.rs
template_yarte/: Cargo.toml
template_yarte/src/: main.rs
todo/: Cargo.toml
todo/src/: api.rs  main.rs  session.rs
unix-socket/: Cargo.toml
unix-socket/src/: main.rs
websocket/: Cargo.toml
websocket-chat/: Cargo.toml
websocket-chat/src/: main.rs  server.rs
websocket/src/: client.rs  main.rs
