[package]
name = "basics"
version = "2.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[dependencies]
loony = { git = "https://github.com/sankar-boro/loony" }
loony-files = { git = "https://github.com/sankar-boro/loony-extras" }
loony-session = { git = "https://github.com/sankar-boro/loony-extras" }
futures = "0.3"
env_logger = "0.8"
bytes = "1.0"
