[package]
name = "cookie-session"
version = "1.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[dependencies]
loony = { git = "https://github.com/sankar-boro/loony" }
loony-session = { git = "https://github.com/sankar-boro/loony-extras" }
futures = "0.3"
time = "0.1"
env_logger = "0.8"
