[package]
name = "jsonrpc-example"
version = "2.0.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"

[dependencies]
loony = { git = "https://github.com/sankar-boro/loony" }
bytes = "1.0"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
