[package]
name = "multipart-example"
version = "0.3.0"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
description = "Simple file uploader in Actix Web with Async/Await"
keywords = ["actix", "actix-web", "multipart"]
repository = "https://github.com/actix/examples"
readme = "README.md"

[dependencies]
loony = { git = "https://github.com/sankar-boro/loony" }
loony-multipart = { git = "https://github.com/sankar-boro/loony-extras" }

futures = "0.3"
