[package]
authors = ["Dan Munckton <dangit@munckfish.net>"]
name = "todo"
version = "2.0.0"
edition = "2018"

[dependencies]
loony = { git = "https://github.com/sankar-boro/loony" }
loony-files = { git = "https://github.com/sankar-boro/loony-extras" }
loony-session = { git = "https://github.com/sankar-boro/loony-extras" }

dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.0"

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "1.3.2"
